# lithos

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  lithos-implementation-plan.md  pyproject.toml
.github/workflows/: ci.yml
configs/: storage.yaml
configs/ablation/: quality-threshold.yaml
configs/data/: fineweb-edu-100m.yaml  fineweb-edu-smoke.yaml  nemotron-100m.yaml  nemotron-sample.yaml  p0-sources.yaml  smoke.yaml
configs/dpo/: lithos-100m-dolly-v2.yaml  lithos-100m-dolly.yaml  lithos-100m-verifier.yaml
configs/eval/: base.yaml  lithos-100m.yaml  lm-eval.yaml  nemotron-sample.yaml  reference_scorecard.jsonl  stem.yaml  tir.yaml
configs/grpo/: lithos-100m-arith.yaml  lithos-tir-toy.yaml  tir-toy-tasks.jsonl
configs/model/: lithos-100m.yaml  lithos-toy.yaml
configs/quality/: rubrics.yaml
configs/sft/: lithos-100m-distill-qwen.yaml  lithos-100m-dolly.yaml  lithos-100m-packed.yaml  mix-smoke.yaml
configs/tokenizer/: bpe-32k.yaml  fineweb-edu-32k.yaml  nemotron-32k.yaml  nemotron-sample.yaml
configs/topicgraph/: seeds.yaml
configs/train/: 100m.yaml  nemotron-sample.yaml  proxy.yaml  single-gpu-smoke.yaml
corpus/: README.md  acquisition.yaml  canon_candidates_chem.csv  canon_candidates_cs.csv  canon_candidates_eng.csv  canon_candidates_math.csv  canon_candidates_physics.csv  math_overlap_report.md  seed_index.csv  targets.yaml
corpus/probes/: README.md  adversarial.jsonl  code.jsonl  engineering.jsonl  general.jsonl  math.jsonl  physics.jsonl  segmentation.jsonl
docs/: README.md  architecture-audit.md  c0-spec.md  chisel-calculus-funnel-confirmation.md  chisel-f7-response.md  chisel-first-cut-response.md  chisel-lithos-r2-contract.md  chisel-producer-migration.md  chisel-tier-gate.md  chisel.md  composite-instrumentation.md  composite-model-layer.md  composite-plan.md  composite-plate.html  data-construction.md  decode-policy.md  eval-plan.md  eval-research-prompt.md  eval-tir-battery-plan.md  flywheel.md  implementation-plan.md  moho.md  petra-composite-attribution.md  petra-provenance-lithos.md  physics-eng-ingestion.md  post-training-implementation-plan.md  post-training-review-2.md  post-training-review.md  posttrain-pressure-test.md  prd.md  quality-classifiers.md  remote-training.md  stem-pretraining-corpus-research.md  strata-gpu-hot-tier.md  tinker-learnings.md  tir-format.md  tokenizer.md  v1-on-qwen.md
lithos/: __init__.py  cli.py
runs/: README.md
scripts/: adapt_qwen_tokenizer.py  build_corpus.sh  build_sft_corpus.py  chat.py  distill_generate.py  eval_tokenizer.py  extract_stackexchange.py  inventory_corpus.py  label_quality.py  launch_train.sh  lib.sh  make_pilot_set.py  prepare_dolly_sft.py  prepare_dpo_prefs.py  prepare_smoke_data.py  prepare_verifier_prefs.py  rank_canon.py  run_ablation.py  run_evals.py  run_overlap_matrix.py  run_tir_battery.py  run_topic_graph.py  serve_labeler.sh  setup_server.sh  sft_chat.py  spike_qwen3_import.py  sync.py  sync_checkpoints.sh  tokenize_corpus.py  train_dpo.py  train_grpo.py  train_model.py  train_quality_classifier.py  train_sft.py  train_tokenizer.py  validate_seed_index.py
tests/: helpers.py  test_ablation.py  test_acquire.py  test_assay_runtime.py  test_attention_mask.py  test_benchmark_publish.py  test_benchmarks.py  test_cctx.py  test_chat_template.py  test_checkpoint_roundtrip.py  test_code_harness.py  test_composite.py  test_config.py  test_contract.py  test_dataloader.py  test_decontam.py  test_decontam_gate.py  test_dedup.py  test_distributed.py  test_documents.py  test_dpo.py  test_env.py  test_export.py  test_filters.py  test_generation.py  test_grpo_step.py  test_hf_import.py  test_io.py  test_labeling.py  test_logging.py  test_markup_text.py  test_minhash.py  test_model_config.py  test_model_shapes.py  test_openstax.py  test_optim.py  test_overlap.py  test_packing.py  test_pdf_extract.py  test_perplexity.py  (+37 more)
(+105 files in other folders)
