[project]
name = "lithos"
version = "0.0.0"
description = "Lithos — a from-scratch family of small general-purpose language models (Strata ecosystem)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Strata Labs" }]

dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "safetensors>=0.4",
    "tokenizers>=0.20",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
    "pyarrow>=17",
    "polars>=1.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tqdm>=4.66",
    "zstandard>=0.22",
]

[project.optional-dependencies]
# Local serving extras (Phase 7); kept out of the core install.
serve = ["fastapi>=0.110", "uvicorn>=0.30"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lithos"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["lithos", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Line length is enforced by the formatter; long config strings are allowed.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["lithos"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
