[project]
name = "lithos"
version = "0.1.0"
description = "Lithos — a from-scratch family of small general-purpose language models (Strata ecosystem)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Strata Labs" }]

dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "safetensors>=0.4",
    "tokenizers>=0.20",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
    "pyarrow>=17",
    "polars>=1.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tqdm>=4.66",
    "zstandard>=0.22",
]

[project.scripts]
lithos = "lithos.cli:main"

[project.optional-dependencies]
# Local serving extras (Phase 7); kept out of the core install.
serve = ["fastapi>=0.110", "uvicorn>=0.30"]
# Evaluation / HF-export interop: transformers loads our Llama/Qwen3 export and
# is the backend for lm-evaluation-harness (`--model hf`). See PRD §26.8.
eval = ["transformers>=4.51", "lm-eval>=0.4.5", "accelerate>=0.26"]
# Cloud object-store backends for the durable artifact store (PRD §26.5).
# fsspec ships with the core install (via datasets); these add S3/R2/GCS.
cloud = ["s3fs>=2024.0", "gcsfs>=2024.0"]
# Experiment tracking: optional W&B mirror of metrics.jsonl (PRD §15). Lazily
# imported and disabled by default, so the core install never needs it.
tracking = ["wandb>=0.18"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lithos"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["lithos", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501: line length is enforced by the formatter. RUF001-003: the ambiguous-unicode
# checks fire on intentional math notation (σ, μ, …) in docstrings and comments.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["RUF012"]     # mutable class attrs are idiomatic in test fixtures
"scripts/**" = ["SIM115"]   # entrypoint scripts may stream-open without a context manager

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["lithos"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
